修改关注状态

--- a/JiaoBaoYun-hb/html/qiuzhi/heAttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/heAttentionPersons.html
@@ -358,6 +358,7 @@
 				var buttonInfo = {};
 				switch(focusType) {
 					case 0:
+					case 2:
 						buttonInfo.classInfo = 'attention-btn';
 						buttonInfo.inner = '关注';
 						break;
@@ -365,11 +366,11 @@
 						buttonInfo.classInfo = 'attentioned-btn';
 						buttonInfo.inner = '已关注';
 						break;
-					case 2:
+					case 3:
 						buttonInfo.classInfo = 'attentioned-btn';
 						buttonInfo.inner = '已互关';
 						break;
-					case 3:
+					case 5:
 						buttonInfo.classInfo = 'display-none';
 						buttonInfo.inner = '自己'
 					default:
@@ -395,49 +396,68 @@
 					if(data.RspCode == 0 && data.RspData.Result == 1) {
 						if(type) {
 							mui.toast('关注成功！')
-							item.className = 'mui-btn mui-btn-outlined attentioned-btn';
-							item.innerText = '已关注';
-							item.personInfo.FocusType = 1;
 						} else {
 							mui.toast('取消关注成功！')
-							item.className = 'mui-btn mui-btn-outlined attention-btn';
-							item.innerText = "关注";
-							item.personInfo.FocusType = 0;
 						}
+						setButtonInfoType(item);
+						var buttonInfo = getButtonContent(item.personInfo.FocusType);
+						item.innerText = buttonInfo.inner;
+						item.className = 'mui-btn mui-btn-outlined' + buttonInfo.classInfo;
 
 					}
 				})
 			}
-			var setListener = function() {
-				mui('.mui-table-view').on('tap', '.attention-btn', function() {
-					var focusType;
-					switch(this.personInfo.FocusType) {
+			/**
+			 *	关注状态关注的
+			 * @param {Object} item
+			 */
+			var setButtonInfoType = function(item) {
+					switch(item.personInfo.FocusType) {
 						case 0:
-							focusType = 1;
+							item.personInfo.FocusType = 1;
 							break;
 						case 1:
+							item.personInfo.FocusType = 0;
+							break;
 						case 2:
+							item.personInfo.FocusType = 3;
+							break;
 						case 3:
-							focusType = 0;
+							item.personInfo.FocusType = 2;
 							break;
 						default:
 							break;
 					}
-					//					if(focusType == 1) {
-					setFocus(this, focusType);
-					//					}
-				});
+					var setListener = function() {
+						mui('.mui-table-view').on('tap', '.attention-btn', function() {
+							var focusType;
+							switch(this.personInfo.FocusType) {
+								case 0:
+									focusType = 1;
+									break;
+								case 1:
+									//								case 2:
+								case 3:
+									focusType = 0;
+									break;
+								default:
+									break;
+							}
+							//					if(focusType == 1) {
+							setFocus(this, focusType);
+							//					}
+						});
 
-				//点击头像、昵称、简介进入专家主页
-				mui('.mui-table-view').on('tap', '.person-info', function() {
-					//获取到当前控件的父节点
-					var parent = this.parentNode.parentNode.parentNode.parentNode;
-					//得到父节点的值
-					var info = JSON.parse(parent.getAttribute('data-info'));
-					events.openNewWindowWithData('expert-detail.html', info);
-					events.fireToPageWithData('expert-detail.html', 'expert-detail', info);
-				});
-			}
+						//点击头像、昵称、简介进入专家主页
+						mui('.mui-table-view').on('tap', '.person-info', function() {
+							//获取到当前控件的父节点
+							var parent = this.parentNode.parentNode.parentNode.parentNode;
+							//得到父节点的值
+							var info = JSON.parse(parent.getAttribute('data-info'));
+							events.openNewWindowWithData('expert-detail.html', info);
+							events.fireToPageWithData('expert-detail.html', 'expert-detail', info);
+						});
+					}
 		</script>
 	</body>
 
