--- a/JiaoBaoYun-hb/html/qiuzhi/heAttentionPersons.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/heAttentionPersons.html
@@ -434,6 +434,7 @@
 					var focusType;
 					switch(this.personInfo.FocusType) {
 						case 0:
+						case 2:
 							focusType = 1;
 							break;
 						case 1:
