群成员样式

--- a/JiaoBaoYun-hb/html/quan/group-pInfo.html
+++ b/JiaoBaoYun-hb/html/quan/group-pInfo.html
@@ -19,21 +19,21 @@
 			<div class="info-main">
 				<img id="info-headImg" src="../../image/utils/default_personalimage.png" class="info-headImg" />
 				<div class="info-briefIntro">
-					<h5 id="info-name" class="info-name">个人姓名</h5>
+					<!--<h5 id="info-name" class="info-name">个人姓名</h5>-->
 					<p id="info-nick" class="info-nick">个人昵称</p>
 				</div>
 			</div>
 			<ul class="mui-table-view">
 				<li id="person-gData" class="mui-table-view-cell">
 					<a class="mui-navigate-right">
-						资料
+						<p class="info-data">资料</p>
 						<span id="data-info" class="mui-badge single-line">数字</span>
 					</a>
 
 				</li>
 				<li id="personal-space" class="mui-table-view-cell">
 					<a class="mui-navigate-right">
-						空间
+						<p class="info-space">空间</p>
 						<span id="person-space" class="mui-badge single-line">数字</span> </a>
 				</li>
 				<li id="edit-remark" class="mui-table-view-cell">
