--- a/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/experts_main.html
@@ -22,8 +22,13 @@
 				background-color: white;
 			}
 
+			.mui-slider .mui-segmented-control.mui-segmented-control-inverted .mui-control-item {
+				color: #222222;
+			}
+
 			.mui-slider .mui-segmented-control.mui-segmented-control-inverted .mui-control-item.mui-active {
-				border-bottom: 2px solid #00A5E0;
+				border-bottom: 2px solid #1db8f5;
+				color: #00A5E0;
 			}
 
 			.mui-scroll-wrapper {
@@ -35,7 +40,7 @@
 			}
 
 			.mui-slider-indicator.mui-segmented-control {
-				background-color: #F8F9FB;
+				background-color: #F5F5F5;
 			}
 
 			.more-navigation {
@@ -46,17 +51,18 @@
 				text-align: center;
 				padding: 5px 10px;
 				border: solid thin #000000 2px;
-				box-shadow: -5px 0 5px -3px #d2d2d2;
-				z-index: 999;
+				box-shadow: -5px 0px 5px -3px #d2d2d2;
+				z-index: 2;
 				background-color: #F5F5F5;
 			}
 
 			.more-navigation p {
 				line-height: 50%;
+				color: #222222;
 			}
 
 			.more-navigation a {
-				color: #8f8f94;
+				color: #222222;
 			}
 
 			.mui-slider .mui-segmented-control.mui-segmented-control-inverted~.mui-slider-group .mui-slider-item {
