--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetail.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-answerDetail.html
@@ -24,6 +24,9 @@
 		<script src="../../js/utils/events.js"></script>
 		<script type="text/javascript">
 			events.initSubPage('qiuzhi-answerDetailSub.html');
+			mui.plusReady(function(){
+				events.changeTopPocket();
+			})
 		</script>
 	</body>
 
