更新 求知 搜索
解决：
搜索结果黑线问题
搜索框叉号图标位置问题

--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
@@ -48,7 +48,7 @@
 					</ul>
 				</div>
 			</div>
-			<div class="mui-scroll-wrapper mui-fullscreen  mui-hidden" style="z-index:0;" id="list-container">
+			<div class="mui-scroll-wrapper mui-fullscreen  mui-hidden" style="z-index:0;" id="list-container" >
 				<div class="mui-scroll">
 					<ul class="mui-table-view">
 						<!--<li class="mui-table-view-cell">
@@ -89,7 +89,7 @@
 			mui.init();
 			mui.plusReady(function() {
 				//注册列表项点击事件
-				mui('.mui-table-view').on('tap', 'li', function() {
+				mui('#list-container .mui-table-view').on('tap', 'li', function() {
 					//获取存储值
 					var tabid = JSON.parse(this.getAttribute('tabid'));
 					console.log('dianji 标题' + JSON.stringify(tabid));
