--- a/JiaoBaoYun-hb/html/homework/homework-publish.html
+++ b/JiaoBaoYun-hb/html/homework/homework-publish.html
@@ -49,9 +49,10 @@
 					<textarea id="publish-content" type="text" maxlength="500" placeholder="输入你要布置的作业内容,最多500字！"></textarea>
 					<!--一期隐藏拍照、相机、录音功能-->
 					<div class="publish-extras">
-						<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>
+						<!--<a id="getRecord" class="mui-icon iconfont icon-yuyin"></a>-->
 						<a id="getImg" class="mui-icon iconfont icon-xiangji1"></a>
 						<a id="getVideo" class="mui-icon iconfont icon-shipin"></a>
+						<a id="get_gallery" class="mui-icon iconfont icon-xiangce"></a>
 					</div>
 				</div>
 				<div id="pictures" class="img-container imgs-extras"></div>
