--- a/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
+++ b/JiaoBaoYun-hb/html/qiuzhi/qiuzhi-questionSearch.html
@@ -211,7 +211,7 @@
 					li.innerHTML = "<a><span class='mui-icon mui-icon-search'></span> <span>" + item.text + "</span><span class='mui-icon icon-del' ></span></a>";
 					history_container.insertBefore(li, history_container.firstChild);
 				});
-				if(list_History.length > 0) {
+				if(list_History&&list_History.length > 0) {
 					//					<li class="mui-table-view-cell">
 					//							<span> 清空历史记录</span>
 					//						</li>
